# kicksat

./: .gitignore  KickSat Solar Panel Data.xlsx  README  README.md  index.html  radio.html
Development Kit/HMC5883Llibrary/: HMC5883L.c  HMC5883L.h  HMC5883L_Config.h
Development Kit/ITG3200Library/: main.c
Development Kit/MAG3110Library/: main.c
Development Kit/TI_i2c_library/: TI_USCI_I2C_master.c
DevelopmentKit/: DevKit Inside Sticker.doc  DevKit Outside Sticker.doc
DevelopmentKit/Energia/CompassDemo/: CompassDemo.ino
DevelopmentKit/Energia/CompassDemo01/: CompassDemo01.ino
DevelopmentKit/Energia/EM430Blink/: EM430Blink.ino
DevelopmentKit/Energia/GyroDemo/: GyroDemo.ino
DevelopmentKit/Energia/GyroTest/: GyroTest.ino
DevelopmentKit/Energia/HMC5883L_Simple/: HMC5883L_Simple.ino
DevelopmentKit/Energia/HMC5883L_Test/: HMC5883L_Test.ino
DevelopmentKit/Energia/ITG3200_test/: ITG3200_test.ino
DevelopmentKit/Energia/MagGyroDemo/: MagGyroDemo.ino
DevelopmentKit/Energia/MagTest/: MagTest.ino  TI_USCI_I2C.ino
DevelopmentKit/Energia/MagnetometerDemo/: MagnetometerDemo.ino
DevelopmentKit/Energia/RFTest/: RFTest.ino
DevelopmentKit/Energia/RFTest2/: RFTest2.ino
DevelopmentKit/HMC5883Llibrary/: main.c
DevelopmentKit/ITG3200Library/: ITG3200.c  ITG3200.h  ITG3200_Config.h
DevelopmentKit/MAG3110Library/: MAG3110.c  MAG3110.h  MAG3110_Config.h
DevelopmentKit/TI_i2c_library/: TI_USCI_I2C_master.h
Ground Station/: Link Budgets.xlsx  Sprite Link Budget.xlsx
Ground Station/GNURadio/: CorrelatorTest.grc  FunCubeTest.grc  eigentest.cc  top_block.py
GroundStation/: Link Budgets.xlsx
GroundStation/GNURadio/: BitTest.grc  BitTest64k.grc  CorrelatorTest.grc  CorrelatorTest64k.grc  FunCubeTest.grc  Install-SpriteRadio  Mac_cmake_command.txt  SpriteReceiver.grc  top_block.py
GroundStation/GNURadio/gr-sprite/lib/: CMakeLists.txt  sprite_bit_decimator_fb.cc  sprite_bit_threshold_fb.cc  sprite_bitdetector_fb.cc  sprite_correlator_cf.cc  sprite_decoder_b.cc  sprite_soft_bit_decimator_ff.cc  sprite_soft_decoder_f.cc  sprite_stddev_ff.cc
Sprite/: Energia.tiff  Replica.bom  Sprite Souvenir BOM.xls  Sprite.bom
(+154 files in other folders)
